feat: Introduce new core services for security, updates, caching, and authentication, integrate numerous game mods and configurations, and refactor launcher components.